@@ -834,6 +834,18 @@
                   </div>
                 </div>
               </div>
+
+              <div class="card-wrapper">
+                <div class="card text-center">
+                  <img class="card-img-top" src="/img/reviews/SoupMario.png" alt="SoupMario" />
+                  <div class="card-body">
+                    <h3>SoupMario</h3>
+                    <p class="card-text">
+                      92/10 very epic and cool site 😎 👍
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
